<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Lab 2 GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="hintText">Enter your name here</string>
    <string name="toast_message">Here is more information</string>
    <string name="sw_on_message">The switch is now on</string>
    <string name="sw_off_message">The switch is now off</string>
    <string name="undo_message">Undo</string>
    <string name="req_email">Enter your email:</string>
    <string name="enter_email">Type email here</string>
    <string name="req_pw">Enter your password</string>
    <string name="enter_pw">Type password here</string>
    <string name="login">Login</string>
    <string name="yourProfile">Your Profile</string>
    <string name="name">Your Name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="email">Your Email:</string>
    <string name="picture">Your picture</string>
    <string name="req_click">Click the button above to take a picture</string>
    <string name="chat_button">Go to chat!</string>
    <string name="msg">Type here</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="send_text">send text</string>
    <string name="received_text">received text</string>
    <string name="weather_btn_text">Check Weather</string>
    <string name="value">current</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="uv">Uv</string>
</resources>