<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="647dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="94dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="651dp" />

        <EditText
            android:id="@+id/editMsg"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/msg"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/receiveButton"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/received" />
    </LinearLayout>
</LinearLayout>